app/kubernetes/service_backend_dev.yaml
apiVersion: v1
kind: Service
metadata:
  # annotations:
  #   cloud.google.com/backend-config: '{"ports": {"80":"advanceddesign-dev-backend-config"}}'
  labels:
    app.kubernetes.io/name: advanceddesign-backend
    app.kubernetes.io/version: "1.0"
  name: advanced-design-backend
  namespace: advanced-design-dev
spec:
  ports:
  - name: advanceddesign-dev
    port: 8882
    protocol: TCP
    targetPort: 8882
  selector:
    app.kubernetes.io/instance: advanceddesign-backend-dev
    app.kubernetes.io/name: advanceddesign-backend
  type: ClusterIP
