app/kubernetes/service_backend_uat.yaml
apiVersion: v1
kind: Service
metadata:
  # annotations:
  #   cloud.google.com/backend-config: '{"ports": {"80":"advanceddesign-uat-backend-config"}}'
  labels:
    app.kubernetes.io/name: advanceddesign-backend
    app.kubernetes.io/version: "1.0"
  name: advanced-design-backend
  namespace: advanced-design-uat
spec:
  ports:
  - name: advanceddesign-uat
    port: 8882
    protocol: TCP
    targetPort: 8882
  selector:
    app.kubernetes.io/instance: advanceddesign-backend-uat
    app.kubernetes.io/name: advanceddesign-backend
  type: ClusterIP
