app/kubernetes/service_frontend_prod.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/backend-config: '{"ports": {"80":"advanceddesign-prod-backend-config"}}'
  labels:
    app.kubernetes.io/name: advanceddesign-frontend
    app.kubernetes.io/version: "1.0"
  name: advanceddesign-frontend
  namespace: advanced-design-prod
spec:
  externalTrafficPolicy: Cluster
  loadBalancerIP: 35.186.213.34
  ports:
  - name: advanceddesign-prod
    port: 8088
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/instance: advanceddesign-frontend-prod
    app.kubernetes.io/name: advanceddesign-frontend
  sessionAffinity: None
  type: LoadBalancer
