app/kubernetes/service_frontend_qa.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/backend-config: '{"ports": {"80":"advanceddesign-qa-backend-config"}}'
  labels:
    app.kubernetes.io/name: advanceddesign-frontend
    app.kubernetes.io/version: "1.0"
  name: advanceddesign-frontend
  namespace: advanced-design-qa
spec:
  externalTrafficPolicy: Cluster
  loadBalancerIP: 35.190.72.44
  ports:
  - name: advanceddesign-qa
    port: 8088
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/instance: advanceddesign-frontend-qa
    app.kubernetes.io/name: advanceddesign-frontend
  sessionAffinity: None
  type: LoadBalancer
